# nocc

./: .gitignore  LICENSE  Makefile  README.md  bootstrap.sh  go.mod  go.sum
.github/workflows/: tests.yml
cmd/: nocc.cpp
cmd/nocc-daemon/: main.go
cmd/nocc-server/: main.go
cpp-example/: CMakeLists.txt  build.sh
cpp-example/src/: all-headers.h  main.cpp  my-strings.cpp  my-warning.cpp
docs/: architecture.md  compare-with-distcc.md  configuration.md  installation.md  ninja-problem.md
docs/img/: nocc-presentation.drawio  nocc.drawio
internal/client/: compile-locally.go  compile-remotely.go  daemon-sock.go  daemon.go  dep-cmd-flags.go  dep-files.go  deps-cmake-out.go  files-receiving.go  files-uploading.go  grpc-client.go  include-dirs.go  includes-cache.go  includes-collector.go  invocation-summary.go  invocation.go  logger-client.go  manage-servers.go  options-parser.go  options-parser_test.go  own-includes-parser.go  pch-generation.go  remote-connection.go
internal/common/: cmd-env-flags.go  compiler-options.go  filesystem.go  logger.go  own-pch-files.go  sha256-struct.go  version.go
internal/server/: client.go  clients-storage.go  compiler-options.go  cron.go  cxx-launcher.go  file-cache.go  files-stream-server.go  logger-server.go  nocc-server.go  obj-cache.go  pch-compilation.go  session.go  src-cache.go  statsd.go  system-headers.go
pb/: nocc-protobuf.pb.go  nocc-protobuf.proto  nocc-protobuf_grpc.pb.go
tests/: client_test.go  depfiles_test.go  testing_utils.go
tests/dt/: path-macro.cpp  some_complex_depfile.o.d
tests/dt/cmake1/: build.sh
(+9 files in other folders)
